<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
    android:background="@color/white"
android:layout_height="match_parent">

<ImageView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:scaleType="centerCrop"
    android:src="@drawable/texture_left"
    app:layout_constraintBaseline_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTexture"
    app:layout_constraintDimensionRatio="1:3"
    app:layout_constraintStart_toStartOf="parent" />

<ImageView
    android:id="@+id/ellipse"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@drawable/ellips"
    app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
    app:layout_constraintDimensionRatio="1:1"
    app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
    app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop"
    app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvAppName"
        style="@style/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:drawablePadding="6dp"
        android:text="CropConnect."
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRightAddressForShopping"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/harvest"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@id/ellipse"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
    android:id="@+id/tvQuality"
    style="@style/h2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="44dp"
    android:gravity="center"
    android:text="@string/qulity"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
    app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping" />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/texture_right"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart"
        style="@style/blueButtonStyle"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/browse_market"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@id/tvQuality"
        app:layout_constraintTop_toBottomOf="@id/tvQuality"
        app:layout_constraintVertical_bias="0.537" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart2"
        style="@style/blueButtonStyle"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/list_harvest"
        app:layout_constraintBottom_toBottomOf="@id/buttonStart"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@id/tvQuality"
        app:layout_constraintTop_toBottomOf="@id/tvQuality"
        app:layout_constraintVertical_bias="0.492" />

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineLeftTexture"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.33" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineEllipseLeft"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.15" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineEllipseRight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.85" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineEllipseTop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.19" />
<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineEllipseBottom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.52" />
</androidx.constraintlayout.widget.ConstraintLayout>